## CHANGELOG

- __2014/12/20__: 0.9.7 release.
    - Issue 14: [adding automatic discovery for mecab library; no need to
	explicitly set
	MECAB_PATH!](https://bitbucket.org/buruzaemon/natto/issue/14/automatic-discovery-of-libmecab-path-and)
    - Issue 15: [refactored node-parsing to use Enumerator instead of
	materializing every node and stuffing into
	array](https://bitbucket.org/buruzaemon/natto/issue/15/use-enumerator-when-parsing-mecab-nodes)
    - Issue 17: [adding filepath to MeCab and
	DictionaryInfo](https://bitbucket.org/buruzaemon/natto/issue/17/use-filerealpath-value-for-all-file-paths)
    - Issue 18: [bug-fix for node-formatting during default node
	parse](https://bitbucket.org/buruzaemon/natto/issue/18/no-node-formatting-when-using-default-node)
    - Deprecating parse_as_nodes and parse_as_strings; please use parse instead!
    - CAUTION: parse_as_nodes, parse_as_strings, readnodes and readlines will be removed in the following release!
    - Enhancements to to_s methods for both MeCab and DictionaryInfo
    - Enhancements to TestDictionaryInfo to allow for building user dic during setup on Windows as well
    - Slight enhancement to benchmark task.
    - Updating LICENSE (adding copyright year 2015), adding to all files 
	
- __2013/07/07__: 0.9.6 release.
    - Upgrade to mecab 0.996
    - Adding support for partial parsing mode (-p / --partial)
    - Adding support for marginal probability output mode (-m / --marginal)
    - Adding support for maximum grouping size for unknown words (-M / --max-grouping-size)
    - Outputting warning message for deprecation of :lattice_level option
    - Requiring ffi 1.9.0 or greater
    - Dropping support for Ruby 1.8.7
    - Migrating to minitest
    - Removing automatic library load for Cygwin platform (does not compile) 

- __2012/09/16__: 0.9.5 release.
    - Fixed [Issue 9: trimされていない文字列のparse](https://bitbucket.org/buruzaemon/natto/issue/9/trim-parse) 